- Implemented: MQTT-AD: Fan percentage_command_template merged with preset_modes
- Implemented: SetPoint devices can now be configured with a custom unit, min/max and step size and have a custom icon
- Implemented: Support for Pytjon 3.12
- Implemented: TeleInfo, added Tempo field
- Implemented: Temp/Hum/Baro or combination can be replaced by any other Temp/Hum/Baro or combination
- Changed: Floorplan, better display of current state for counter devices
- Changed: Floorplan, Sound Icon state (0 dB = Off else On)
- Changed: MQTT-AD: better device name generation
- Changed: Netatmo login, now using the API Token
- Fixed: Eport to csv from Charts
- Fixed: EventSystem, corrected event of RGB/W/WW devices
- Fixed: MQTT-AD: better handling of Push-On/Push-Off devices
- Fixed: MQTT-AD: better handling of Switch commands that needs a 'state' object
- Fixed: MQTT-AD: fixed brightness for HS lights
- Fixed: MQTT-AD: prevent blind from updating on non-numeric state changes
- Fixed: MQTT-AD, RGB dimmers did not work correctly in scenes/timers
- Fixed: P1 Meter, buffer size increased because of large datagrams on some meters
- Fixed: Sunset/rise timers now correctly set the time for next day
- Fixed: Switches defined with "Off Delay" are not set to "Off" at startup
- Removed: OpenZWave (Move to ZWaveJS-UI in combination with MQTT Auto Discovery)
- Removed: RFXCom, updating firmware via web interface (use RFXFlash instead)

Version 2023.2 (July 21 2023)
- Implemented: 2FA/TOTP (Time-based One-Time Password) and HOTP (HMAC-based One-Time Password)
- Implemented: Alfen Eve Charger hardware
- Implemented: Allow a 'user' with shared devices to set it's own favorite devices
- Implemented: Custom pages, new Angular template examples
- Implemented: Custom pages, now need at least a user with Viewer rights
- Implemented: Enever hardware (Live Dutch Gas/Electricity prices for various providers)
- Implemented: Enphase, (V7 firmware) added support for enabling/disabling power production