@@ -201,7 +201,7 @@ define(['app', 'report/helpers'], function (app, reportHelpers) {
         function init() {
             vm.isMonthView = vm.selectedMonth > 0;
             vm.degreeType = $.myglobals.tempsign;
-
+			$.devIdx = vm.device.idx;
             getData();
         }
 
@@ -407,6 +407,10 @@ define(['app', 'report/helpers'], function (app, reportHelpers) {
             });
         }
 
+		function reloadPage() {
+			window.location.reload();
+		}
+		
         function showVariationChart(data) {
             var chartElement = $element.find('#variation-graph');
 
@@ -453,6 +457,15 @@ define(['app', 'report/helpers'], function (app, reportHelpers) {
                         : ' °' + vm.degreeType
                 },
                 plotOptions: {
+					series: {
+						point: {
+							events: {
+								click: function (event) {
+									chartPointClickNew(event, false, reloadPage);
+								}
+							}
+						}
+					},
                     columnrange: {
                         dataLabels: {
                             enabled: !vm.isMonthView,
